tests-integration/fixtures/checking/156_derive_bifunctor_insufficient_params/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Triple ::
  forall (a :: Type) (b :: Type) (c :: Type).
    (a :: Type) -> (b :: Type) -> (c :: Type) -> Triple (a :: Type) (b :: Type) (c :: Type)

Types
Triple :: Type -> Type -> Type -> Type

Data
Triple
  Quantified = :0
  Kind = :0


Roles
Triple = [Representational, Representational, Representational]

Derived
derive Bifunctor (Triple Int String :: Type -> Type)

Diagnostics
error[CannotUnify]: Cannot unify 'Type' with 'Type -> Type'
  --> 6:27..6:46
  |
6 | derive instance Bifunctor (Triple Int String)
  |                           ^~~~~~~~~~~~~~~~~~~
error[CannotDeriveForType]: Cannot derive for type: Triple Int String
  --> 6:1..6:46
  |
6 | derive instance Bifunctor (Triple Int String)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
